--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   bloc: ^8.1.4
   flutter_bloc: ^8.1.6
   shared_preferences: ^2.3.3
+  http: ^1.2.2
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
